CSS issue on collapse

--- a/src/public/assets/styles/vf-bones.css
+++ b/src/public/assets/styles/vf-bones.css
@@ -263,7 +263,7 @@ transition: transform 0.3s ease-in-out, width 0.3s ease-in-out;
  */
 @media (min-width: 768px) {
 .sidebar-mini.sidebar-collapse .content-wrapper,  .sidebar-mini.sidebar-collapse .right-side { margin-left:50px!important; z-index: 821; }
-.sidebar-mini.sidebar-collapse .main-sidebar { -webkit-transform: translate(0, 0); -ms-transform: translate(0, 0); -o-transform: translate(0, 0); transform: translate(0, 0); width: 50px!important; z-index: 822; }
+.sidebar-mini.sidebar-collapse .main-sidebar { -webkit-transform: translate(0, 0); -ms-transform: translate(0, 0); -o-transform: translate(0, 0); transform: translate(0, 0); width: 0px!important; z-index: 822; }
 .main-sidebar { overflow:hidden; }
 .sidebar-mini.sidebar-collapse .main-sidebar .nav-tabs > li { display:none; }
 .sidebar-mini.sidebar-collapse .main-sidebar .nav-tabs > li.active { display:block; }
